ADD CXPMI IndustrialManufacture
